# competitive-programming

./: CMakeLists.txt  c+++.cpp  copy.sh  template.cpp  template_common.cpp  template_google.cpp
AdventofCode/: password.py  report  report.cpp
Atcoder/Grand Contest 047/: b.cpp
EOPIP/CHAP 1/: count_ones_int.py  count_ones_int.py:tests
Google kickstart/kickstart-round D-2020/: a  b.cpp
Google kickstart/practice_round_2022/: centauri_prime  centauri_prime.cpp  centauri_prime.cpp:tests  h-index  h-index.cpp  h-index.cpp:tests
Hackerrank/: Crossword Puzzle.py  anagrams.py  anagrams.py:tests  back.cpp  binaryTree.cpp  botclean.cpp  bundles.cpp  checkpython.py  cittationns.cpp  closest_divisor.py  connected.py  cow_haybales.cpp  dead_pixel.cpp  fast_food_restaurant.cpp  heap.cpp  home_coming.cpp  houses.py  ice_cream_parlor.cpp  knapsack_greedy.py  knightL_chessboard.cpp  lab4  lab4-2.cpp  lab4.cpp  lab4.cpp:tests  largest_mul2.py  libraryKickSart.cpp  mango.cpp  mini_cost.cpp  missing_numbrs.py  oddevne.cpp  princess.cpp  radio_transmitter.py  satisfying_voters.cpp  sock_merchant.cpp  sort.cpp  sort_bits.cpp  subarray_medians.cpp
IEEExtreme/: Dog_Walking.cpp  Inti_set.cpp  alfapool.cpp  bee.cpp  bee.py  binary.cpp  binarynew.cpp  counting_Molecules.cpp  foodTruck.cpp  gcd.cpp  googleplex.cpp  infinit.cpp  infinite.py  magicSquare.cpp  painter_dilemma.cpp  permutations.cpp  playwithGCD.cpp  rapper.cpp  reshuffle.py  yingyang.cpp
IEEExtreme/IEEEXtreme 2019/: backToSquare.cpp  dining_table.cpp  extractor.cpp  extractor.py  extrct.py  gcd.cpp  kabloom.cpp  ruined_tanks.cpp  sheldonsGame.cpp  tempCodeRunnerFile.cpp
IEEExtreme/IEEExtreme14/: copy.sh  template.cpp
IEEExtreme/IEEExtreme14/A/: solution  solution.cpp
Miscelleneous/: check_array  check_array.cpp  test  test.cpp  test.cpp:tests  yaala.py
Unknown/: bigBro.cpp  countdown.cpp  max_inc.cpp
algorithms/: bellmanford.cpp  bfs.cpp  dfs.cpp  dijkstra_unweighted.cpp  dijkstra_weighted_faster.cpp  disjkstra_weighted.cpp  fast_factorial.cpp  fast_factors  fast_factors.cpp  fast_factors_upto_n  fast_factors_upto_n.cpp  fastfibonacci.cpp  floyd_warshall_dpAlgo.cpp  quickunion.cpp  quickunionfindwaited.cpp  topological_sort.cpp
codeforces/: ShortSubstrings.cpp  elimination  elimination.cpp  even_array.cpp  fraction.cpp  good_string.cpp  heist  heist.cpp  house.cpp  laddu.cpp  naruto.cpp  next_round.cpp  odd_selection.cpp  problemSet  problemSet.cpp  soe_perm.cpp  string_task.cpp  sublime.cpp  wiggle_walk.py
codeforces/problem set/: alarm_clock.cpp  binary_median.cpp  copy.sh  domino.cpp  dragons.cpp  facry.cpp  helpfulmaths.cpp  kickstarrt1.py  min_val  min_val.cpp  next_round  next_round.cpp  problemSet.cpp  social_distance.cpp  stacks.cpp  taxi.cpp  theatre_square  theatre_square.cpp  two_arrays.cpp  unstable_array.cpp  way_too_long  way_too_long.cpp  workout.cpp
codeforces/round 660/: a.cpp  b.cpp
codeforces/round 661/: a.cpp  b.cpp  c.cpp  d.cpp
csacademy/: checking.py  divisibleby3.cpp  max_events.py  rabbits.py  tempCodeRunnerFile.py  threestrings.cpp
cses/: array_description.cpp  coin_combination1.cpp  coin_combination2.cpp  dice_combination.cpp  discord.cpp  edit_distamce.cpp  input.txt  minimize_coins.cpp  money_sums.cpp  rectangle_cutting.cpp  removin_digits.cpp  weird_algorithm.cpp
cses/Algoritmit ongelmanratkaisussa/: two_sets  two_sets.cpp  two_sets.cpp:tests
cses/Introductory problems/: WeirdClass.java  increasing_array.cpp  permutations.cpp  reptitions.cpp
cses/Sorting and Searching/: max_sub_aray.cpp  nearestsmallestnumber  nearestsmallestnumber.cpp  subarray1.cpp  subdivisibility  subdivisibility.cpp  sumfour  sumfour.cpp
cses/dynamic programming/: array_description.cpp  book_shop  book_shop.cpp  coin_combination2.cpp  edit_distamce  edit_distamce.cpp  grid_paths.cpp  increasing_sequence.cpp  removal_game.cpp  towers.cpp  two_sets.cpp
cses/graphs/: 1682  1682.cpp  Labyrinth.cpp  Labyrinth_bfs.cpp  building_roads.cpp  building_teams.cpp  course_schedule.cpp  coutning_rooms.cpp  cycle_finding.cpp  flight_discount.cpp  flight_routes.cpp  game_routes.cpp  high_score.cpp  longest_flight_routes.cpp  message_route.cpp  planet_queries.cpp  road_repair  road_repair.cpp  round_trip.cpp  round_trip2.cpp  shortest_routes1.cpp  shortest_routes2.cpp
cses/mathematics/: 1082  1082.cpp  1096  1096.cpp  1715  1715.cpp  1716  1716.cpp  1717.cpp  1722  1722.cpp  Graph_path(1723).cpp  binomial_coefficients.cpp  counting_divisors.cpp  expo_2.cpp  exponentiating.cpp  graph_path2.cpp
cses/range_queries/: 1646.cpp  mini_queries.cpp
data structures/: cpp_maps.cpp  dynamicarrays.cpp  random.cpp
data structures/hash table/: hashing.py
facebook hackercup 2020/: travel_restriction.cpp
kattis/: mini_scalar_product.cpp  spelling.cpp
kickstart/: perfectsquare.cpp
kickstart/kickstart-round D-2020/: a.cpp  c.cpp
leetcode/: add_two_numbes.cpp  candy.cpp  longest_plaindrome.cpp  median_of_two_sorted_arrays.cpp  unique_paths.cpp
leetcode/contest 178/: bing0.py  first.cpp  integer.py  robots.py  string_queires.py  subrectangles.py  subset.py
mac_setup/: CMakeLists.txt  main.cpp  quick_code.cpp
mac_setup/CSES/Introductory/: bit_strings.cpp  coin_piles.cpp  gray_code.cpp  increasin_array.cpp  missing_number.cpp  palindrome_reorder.cpp  permutations.cpp  repetitions.cpp  towers_of_hanoi.cpp  trailing_zeros.cpp  two_nights.cpp  two_sets.cpp  weird_algorithm.cpp
mac_setup/codeforces/: nearest_neighbour.cpp
mac_setup/hackerrank/: 2d_array.cpp  array_manipulation.cpp  left_rotation.cpp  min_swap_2.cpp  new_year_chaos.cpp  test_temp.cpp
mac_setup/hackerrank/Hash table/: count_triplets.cpp  freq_queries.cpp  ransom_note.cpp  sherlock_anagrams.cpp  test_single.cpp  two_strings.cpp
moraextreme/: binaryTree.cpp  dna.cpp  dnaPattern.cpp  matric.cpp  numberCircle.cpp  rangeQuery.cpp  shark.cpp  shark.py
moraextreme/moraextreme 2020/: 1939  1939.cpp  callbat.py  callthebat.py  cctv  cctv.cpp  fifth  fifth.cpp  first  first.cpp  out  pathgame  pathgame.cpp  pathgamenew.cpp  second  sms  sms.cpp
(+59 files in other folders)
